--- a/templates/adminer/pattern/pattern.html
+++ b/templates/adminer/pattern/pattern.html
@@ -12,9 +12,9 @@
         <div class="mx-auto" style="width: 100%">
             <br>
             <div style="position: relative; width: 70%; margin: 0 auto">
-                <h1 class="text-center">Шаблоны анкет</h1>
+                <h1 class="text-center">Анкеты</h1>
                 <div style="position: absolute; right: 0; top: 5px;">
-                    <a href="{% url 'adminer:pattern_create' %}" class="btn btn-success">Создать шаблон анкеты</a>
+                    <a href="{% url 'adminer:pattern_create' %}" class="btn btn-success">Создать анкету</a>
                 </div>
             </div>
             <br>
