--- a/templates/adminer/polls/polls.html
+++ b/templates/adminer/polls/polls.html
@@ -158,7 +158,7 @@
                                        title="Копировать ссылку"><i class="fas fa-link" style="color: white"></i>
                                     </a>
                                     <a href="/admin/polls/copy/{{ poll.id }}" type="button" class="btn btn-primary"
-                                       title="Копировать в шаблон"><i
+                                       title="Копировать"><i
                                             class="far fa-copy"></i></a>
                                     <a href="/admin/polls/edit/{{ poll.id }}" type="button" class="btn btn-warning"
                                        title="Изменить"><i
