--- a/templates/adminer/base.html
+++ b/templates/adminer/base.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="{% url 'adminer:polls' %}">Опросы <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" data-name="pattern">
-                <a class="nav-link" href="{% url 'adminer:pattern' %}">Шаблоны анкет <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'adminer:pattern' %}">Анкеты <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" data-name="category">
                 <a class="nav-link" href="{% url 'adminer:category' %}">Категории <span class="sr-only">(current)</span></a>
