--- a/templates/adminer/category/category_create.html
+++ b/templates/adminer/category/category_create.html
@@ -82,6 +82,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/pattern_edit.js' %}"></script>
+    <script src="{% static 'adminer/js/category_edit.js' %}"></script>
 
 {% endblock %}
