--- a/templates/adminer/category/category_edit.html
+++ b/templates/adminer/category/category_edit.html
@@ -92,6 +92,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/pattern_edit.js' %}"></script>
+    <script src="{% static 'adminer/js/category_edit.js' %}"></script>
 
 {% endblock %}
