--- a/templates/adminer/pattern/pattern_create.html
+++ b/templates/adminer/pattern/pattern_create.html
@@ -16,58 +16,15 @@
             <br>
             <form method="post" class="mt-4" id="form_pattern_edit" url="{% url 'adminer:pattern_create' %}">
                 {% csrf_token %}
+                <h4>Название анкеты</h4>
                 <div class="form-group">
                     <input type="text" class="form-control" id="pattern_title"
                            placeholder="Название анкеты" required>
                 </div>
                 <br>
-                <h4>Добавление вопросов</h4>
-                <div class="box-master" id="question_box_1" data-id="1">
-                    <div class="form-group d-flex align-items-center">
-                        <label for="question_is_verbal_1">Система оценивания вопроса</label>
-                        <select id="question_is_verbal_1" class="form-control select_verbal" data-id="1"
-                                name="question[1]['is_verbal']">
-                            <option value="1">Вербальная</option>
-                            <option value="0">Числовая</option>
-                        </select>
-                    </div>
-                    <div class="box">
-                        <div class="item">
-                            <div style="display: flex">
-                                <button class="btn btn-danger delete_question" data-id="1"><i
-                                        class="fas fa-trash-alt"></i></button>
-                                <input type="text" class="form-control" value="" name="question[1]['title']" required
-                                       placeholder="Введите текст вопроса">
-                            </div>
-                        </div>
-                        <div class="item" id="container_answer_1">
-                            <div class="box_answer" id="box_answer_1" data-id="1">
-                                <input type="text" class="form-control" value="" name="question[1]['answer'][1]"
-                                       required placeholder="Введите текст ответа">
-                                <button class="btn btn-danger answer_delete" data-id="1" data-question="1"><i
-                                        class="fas fa-trash-alt"></i></button>
-                                <span class="cost-answer" id="question[1]['cost'][2]">0</span>
-                                <br>
-                            </div>
-                            <div class="box_answer" id="box_answer_2" data-id="2">
-                                <input type="text" class="form-control" value="" name="question[1]['answer'][2]"
-                                       required placeholder="Введите текст ответа">
-                                <button class="btn btn-danger answer_delete" data-id="2" data-question="1"><i
-                                        class="fas fa-trash-alt"></i></button>
-                                <span class="cost-answer" id="question[1]['cost'][2]">100</span>
-                                <br>
-                            </div>
-                            <div class="d-flex mt-3" style="width: 87%;">
-                                <button class="btn btn-success mx-auto add_answer" data-id="1">Добавить ответ</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="d-flex mt-3">
-                    <button class="btn btn-success" id="add_question">Добавить вопрос</button>
-                </div>
-                <br>
+
+                {% include "adminer/question/create.html" %}
+
                 <br>
                 <div class="d-flex mt-3">
                     <a href="{% url 'adminer:pattern' %}" type="submit" class="btn btn-secondary"
@@ -75,6 +32,8 @@
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </div>
             </form>
+            <br>
+            <br>
         </div>
 
         <div class="mx-auto block-window"></div>
