--- a/templates/adminer/polls/polls.html
+++ b/templates/adminer/polls/polls.html
@@ -65,8 +65,7 @@
                                        title="Копировать в шаблон"><i
                                             class="far fa-copy"></i></a>
                                     <a href="/admin/polls/edit/{{ poll.id }}" type="button" class="btn btn-warning"
-                                       title="Изменить"><i
-                                            class="fas fa-edit"></i></a>
+                                       title="Изменить"><i class="fas fa-pencil-alt"></i></a>
                                     <a href="/admin/polls/delete/{{ poll.id }}" type="button" title="Удалить"
                                        class="btn btn-danger delete_polls delete_polls"><i class="far fa-trash-alt"></i></a>
                                 </td>
@@ -113,8 +112,7 @@
                                        title="Копировать в шаблон"><i
                                             class="far fa-copy"></i></a>
                                     <a href="/admin/polls/edit/{{ poll.id }}" type="button" class="btn btn-warning"
-                                       title="Изменить"><i
-                                            class="fas fa-edit"></i></a>
+                                       title="Изменить"><i class="fas fa-pencil-alt"></i></a>
                                     <a href="/admin/polls/delete/{{ poll.id }}" type="button" title="Удалить"
                                        class="btn btn-danger delete_polls delete_polls"><i class="far fa-trash-alt"></i></a>
                                 </td>
@@ -161,8 +159,7 @@
                                        title="Копировать"><i
                                             class="far fa-copy"></i></a>
                                     <a href="/admin/polls/edit/{{ poll.id }}" type="button" class="btn btn-warning"
-                                       title="Изменить"><i
-                                            class="fas fa-edit"></i></a>
+                                       title="Изменить"><i class="fas fa-pencil-alt"></i></a>
                                     <a href="/admin/polls/delete/{{ poll.id }}" type="button" title="Удалить"
                                        class="btn btn-danger delete_polls delete_polls"><i class="far fa-trash-alt"></i></a>
                                 </td>
