--- a/templates/adminer/polls/polls.html
+++ b/templates/adminer/polls/polls.html
@@ -58,11 +58,11 @@
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
-                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{% url "adminer:polls_edit" poll.id %}"
+                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/polls/{{ poll.id }}"
                                        title="Копировать ссылку"><i class="fas fa-link" style="color: white"></i>
                                     </a>
                                     <a href="/admin/polls/copy/{{ poll.id }}" type="button" class="btn btn-primary"
-                                       title="Копировать в шаблон"><i
+                                       title="Копировать"><i
                                             class="far fa-copy"></i></a>
                                     <a href="/admin/polls/edit/{{ poll.id }}" type="button" class="btn btn-warning"
                                        title="Изменить"><i class="fas fa-pencil-alt"></i></a>
@@ -105,11 +105,11 @@
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
-                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{% url "adminer:polls_edit" poll.id %}"
+                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/polls/{{ poll.id }}"
                                        title="Копировать ссылку"><i class="fas fa-link" style="color: white"></i>
                                     </a>
                                     <a href="/admin/polls/copy/{{ poll.id }}" type="button" class="btn btn-primary"
-                                       title="Копировать в шаблон"><i
+                                       title="Копировать"><i
                                             class="far fa-copy"></i></a>
                                     <a href="/admin/polls/edit/{{ poll.id }}" type="button" class="btn btn-warning"
                                        title="Изменить"><i class="fas fa-pencil-alt"></i></a>
@@ -152,7 +152,7 @@
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
-                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{% url "adminer:polls_edit" poll.id %}"
+                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/polls/{{ poll.id }}"
                                        title="Копировать ссылку"><i class="fas fa-link" style="color: white"></i>
                                     </a>
                                     <a href="/admin/polls/copy/{{ poll.id }}" type="button" class="btn btn-primary"
