--- a/templates/adminer/polls/polls.html
+++ b/templates/adminer/polls/polls.html
@@ -58,7 +58,7 @@
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
-                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/polls/{{ poll.id }}"
+                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/user/polls/{{ poll.id }}"
                                        title="Копировать ссылку"><i class="fas fa-link" style="color: white"></i>
                                     </a>
                                     <a href="/admin/polls/copy/{{ poll.id }}" type="button" class="btn btn-primary"
@@ -105,7 +105,7 @@
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
-                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/polls/{{ poll.id }}"
+                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/user/polls/{{ poll.id }}"
                                        title="Копировать ссылку"><i class="fas fa-link" style="color: white"></i>
                                     </a>
                                     <a href="/admin/polls/copy/{{ poll.id }}" type="button" class="btn btn-primary"
@@ -152,7 +152,7 @@
                                 <td class="text-center">{{ poll.date_created|date:'Y-m-d H:i' }}</td>
                                 <td class="text-center">{{ poll.date_updated|date:'Y-m-d H:i' }}</td>
                                 <td>
-                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/polls/{{ poll.id }}"
+                                    <a type="button" class="btn btn-info btn_copy_link" data-link="{{ request.get_host }}/user/polls/{{ poll.id }}"
                                        title="Копировать ссылку"><i class="fas fa-link" style="color: white"></i>
                                     </a>
                                     <a href="/admin/polls/copy/{{ poll.id }}" type="button" class="btn btn-primary"
