--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,4 +1,5 @@
 {% load mathfilters %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,69 +7,9 @@
     <title>Опрос #{{ polls.0.id }}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="{% static 'user/css/main.css' %}">
 </head>
 <body style="background-color: #F0EBF8">
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500&display=swap');
-
-    body {
-        font-family: 'Noto Sans JP', sans-serif;
-    }
-
-    .head-form {
-        margin-top: 20px;
-        background-color: #fff;
-        border: 1px solid #dadce0;
-        border-radius: 8px;
-        margin-bottom: 12px;
-        padding: 24px;
-        padding-top: 22px;
-        position: relative;
-        width: 640px;
-        height: 147px;
-    }
-
-    .color-line {
-        border-top-left-radius: 8px;
-        border-top-right-radius: 8px;
-        height: 10px;
-        width: calc(100% + 2px);
-        background-color: rgb(103, 58, 183);
-        color: rgba(255, 255, 255, 1);
-        left: -1px;
-        position: absolute;
-        top: -1px;
-    }
-
-    .question {
-        font-size: 16px;
-        letter-spacing: .1px;
-        line-height: 24px;
-        color: #202124;
-        font-weight: 400;
-    }
-
-    .btn-secondary {
-        background-color: rgb(103, 58, 183);
-    }
-
-    .clear-form {
-        color: rgb(103, 58, 183);
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: .25px;
-        line-height: 36px;
-        text-decoration: none;
-        text-transform: none;
-        min-width: auto;
-        outline: none;
-        overflow: hidden;
-        position: relative;
-        text-align: center;
-        -webkit-tap-highlight-color: transparent;
-    }
-</style>
-
 
 <div class="d-flex">
     <div class="mx-auto">
@@ -77,34 +18,34 @@
             <h1 style="color: black;">{{ polls.0.title }}</h1>
             <p>{{ polls.0.description }}</p>
         </div>
-
-        {% for question in polls.0.questions %}
-
-            <div class="head-form">
-                <p class="question">{{ question.title }}</p>
-                {% if question.is_verbal %}
-                    <div class="form-group">
-                        <select class="form-select">
-                            {% for answer in question.answers %}
-                                <option value="{{ answer.id }}">{{ answer.title }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                {% else %}
-                    <div class="form-group">
-                        Ответ: <span class="number_range"></span>
-                        <input type="range" class="form-range customRange2" min="1" max="{% with question.answers|last as last %}{{ last.title }}{% endwith %}">
-                    </div>
-                {% endif %}
-
+        <form url="{% url 'user:create_user_answer' polls.0.id %}" method="post" id="form_answer">
+            {% csrf_token %}
+            {% for question in polls.0.questions %}
+                <div class="head-form">
+                    <p class="question">{{ question.title }}</p>
+                    {% if question.is_verbal %}
+                        <div class="form-group">
+                            <select class="form-select" data-question="{{ question.id }}">
+                                {% for answer in question.answers %}
+                                    <option value="{{ answer.id }}">{{ answer.title }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    {% else %}
+                        <div class="form-group">
+                            Ответ: <span class="number_range"></span>
+                            <input type="range" class="form-range customRange2" min="1" data-question="{{ question.id }}"
+                                   max="{% with question.answers|last as last %}{{ last.title }}{% endwith %}">
+                        </div>
+                    {% endif %}
+                </div>
+            {% endfor %}
+            <br>
+            <div class="d-flex justify-content-between align-items-center">
+                <button type="submit" class="btn btn-secondary">Отправить</button>
+                <a href="" class="clear-form">Очистить форму</a>
             </div>
-        {% endfor %}
-        <br>
-        <div class="d-flex justify-content-between align-items-center">
-            <button type="button" class="btn btn-secondary">Отправить</button>
-            <a href="" class="clear-form">Очистить форму</a>
-        </div>
-
+        </form>
     </div>
 </div>
 
@@ -112,17 +53,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
-<script>
-    $(document).ready(function () {
-        $('.customRange2').each(function (){
-            $(this).siblings('.number_range').text(Math.ceil(parseInt($(this).attr('max'))/2));
-        });
-
-        $('.customRange2').change(function () {
-            $(this).siblings('.number_range').text($(this).val());
-        });
-    });
-</script>
+<script src="{% static 'user/js/main.js' %}"></script>
 </body>
 </html>
