--- a/templates/adminer/category/category_edit.html
+++ b/templates/adminer/category/category_edit.html
@@ -10,7 +10,7 @@
             display: none;
         }
     </style>
-    <link rel="stylesheet" href="{% static 'adminer/css/edit_pattern.css' %}">
+    <link rel="stylesheet" href="{% static 'adminer/css/edit_pattern.css' %}" type="text/css">
 
     <div class="d-flex">
         <div class="mx-auto" style="width: 50%">
@@ -92,6 +92,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/category_edit.js' %}"></script>
+    <script src="{% static 'adminer/js/category_edit.js' %}" type="text/javascript"></script>
 
 {% endblock %}
