--- a/templates/adminer/polls/polls_statistic.html
+++ b/templates/adminer/polls/polls_statistic.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <link rel="stylesheet" href="{% static 'user/css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'user/css/main.css' %}" type="text/css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <style>
         body {
