--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,6 +1,6 @@
 {% load mathfilters %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'user/css/main.css' %}">
+<link rel="stylesheet" href="{% static 'user/css/main.css' %}" type="text/css">
 
 <div style="background-color: #F0EBF8">
     <div class="d-flex">
@@ -56,4 +56,4 @@
         </div>
     </div>
 </div>
-<script src="{% static 'user/js/main.js' %}"></script>
+<script src="{% static 'user/js/main.js' %}" type="text/javascript"></script>
