--- a/templates/adminer/category/category_create.html
+++ b/templates/adminer/category/category_create.html
@@ -5,7 +5,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <link rel="stylesheet" href="{% static 'adminer/css/edit_pattern.css' %}">
+    <link rel="stylesheet" href="{% static 'adminer/css/edit_pattern.css' %}" type="text/css">
     <style>
         .cost-answer {
             display: none;
@@ -82,6 +82,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/category_edit.js' %}"></script>
+    <script src="{% static 'adminer/js/category_edit.js' %}" type="text/javascript"></script>
 
 {% endblock %}
