--- a/templates/adminer/polls/polls_edit.html
+++ b/templates/adminer/polls/polls_edit.html
@@ -5,7 +5,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <link rel="stylesheet" href="{% static 'adminer/css/edit_pattern.css' %}">
+    <link rel="stylesheet" href="{% static 'adminer/css/edit_pattern.css' %}" type="text/css">
     <div class="d-flex">
         <div class="mx-auto block-window">
             <h4>Список категорий</h4>
@@ -139,6 +139,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/pattern_edit.js' %}"></script>
+    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="text/javascript"></script>
 
 {% endblock %}
