--- a/templates/adminer/category/category_create.html
+++ b/templates/adminer/category/category_create.html
@@ -82,6 +82,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/category_edit.js' %}" type="text/javascript"></script>
+    <script src="{% static 'adminer/js/category_edit.js' %}" type="application/javascript"></script>
 
 {% endblock %}
