--- a/templates/adminer/pattern/pattern_create.html
+++ b/templates/adminer/pattern/pattern_create.html
@@ -48,6 +48,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="text/javascript"></script>
+    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="application/javascript"></script>
 
 {% endblock %}
