--- a/templates/adminer/pattern/pattern_edit.html
+++ b/templates/adminer/pattern/pattern_edit.html
@@ -47,6 +47,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="text/javascript"></script>
+    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="application/javascript"></script>
 
 {% endblock %}
