--- a/templates/adminer/polls/polls_create.html
+++ b/templates/adminer/polls/polls_create.html
@@ -115,6 +115,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="text/javascript"></script>
+    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="application/javascript"></script>
 
 {% endblock %}
