--- a/templates/adminer/polls/polls_edit.html
+++ b/templates/adminer/polls/polls_edit.html
@@ -139,6 +139,6 @@
         });
     </script>
 
-    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="text/javascript"></script>
+    <script src="{% static 'adminer/js/pattern_edit.js' %}" type="application/javascript"></script>
 
 {% endblock %}
