--- a/templates/adminer/polls/polls_statistic.html
+++ b/templates/adminer/polls/polls_statistic.html
@@ -111,6 +111,6 @@
         });
     </script>
 
-    <script type="text/javascript" src="{% static 'adminer/js/stat.js' %}"></script>
+    <script type="application/javascript" src="{% static 'adminer/js/stat.js' %}"></script>
 
 {% endblock %}
