--- a/templates/adminer/category/category_edit.html
+++ b/templates/adminer/category/category_edit.html
@@ -87,7 +87,7 @@
         $(document).ready(function () {
             $('.nav-item').removeClass('active');
             $('.nav-item').each(function () {
-                if ($(this).attr('data-name') === "pattern") $(this).addClass('active')
+                if ($(this).attr('data-name') === "category") $(this).addClass('active')
             });
         });
     </script>
