--- a/templates/adminer/polls/polls_statistic.html
+++ b/templates/adminer/polls/polls_statistic.html
@@ -72,12 +72,18 @@
                             <tr>
                                 <th scope="col">Показатели</th>
                                 <th scope="col">S1</th>
-                                <th scope="col">S6</th>
-                                <th scope="col">S по чебышеву</th>
+                                <th scope="col">S2</th>
+                                <th scope="col">S3</th>
                             </tr>
                             </thead>
                             <tbody></tbody>
                         </table>
+                    </div>
+                    <br>
+                    <div>
+                        <p>S1 - средняя оценка</p>
+                        <p>S2 - средне-весовая оценка по всем эекспертам</p>
+                        <p>S3 - средне-весовая оценка по выбранным экспертам (по Чебышеву)</p>
                     </div>
                     <br>
                     <div id="chart_div"></div>
